# Pneumonia-Prediction-Application

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
Model Notebooks/: train_model.py
deploy/huggingface/: README.md
modelWeights/: pneumonia_model.onnx
src/: inference_onnx.py  pneumonia_model.py
src/api/: app.py
src/core/: utils.py
