[project]
name = "pneominia-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "pillow>=12.2.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.46.0",
]
